--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.4.0",
-    "nodemon": "^1.19.4"
+    "firebase-admin": "^8.8.0",
+    "firebase-functions": "^3.3.0",
+    "nodemon": "^1.19.4",
+    "uuid": "^3.3.3"
   }
 }
