--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "TCC para UNIP",
   "main": "src/server.js",
   "scripts": {
-    "start": "node .\\src\\server.js",
-    "dev": "nodemon .\\src\\server.js"
+    "start": "node src\\server.js",
+    "dev": "nodemon src\\server.js"
   },
   "repository": {
     "type": "git",
